GEOMESA-3285 Update to GeoTools 30.1, GeoServer 2.24.1